<resources>
    <string name="app_name">Test135</string>
    <string name="strname">Name</string>
    <string name="strheight">Height</string>
    <string name="strweight">Weight</string>
    <string name="strsubmit">Submit</string>
    <string name="strnextpage">下一頁</string>
    <string name="strtoolow">too low</string>
    <string name="strtoohigh">too high</string>
    <string name="strgood">good</string>
    <string name="strshowbmi">Your BMI is a</string>

</resources>
